syntax = "proto3";

option go_package = "sigmaos/proc";
import "google/protobuf/timestamp.proto";
import "sigmap/sigmap.proto";

message ProcSecretProto {
  string iD = 1;
  string key = 2;
}

message ProcClaimsProto {
  string principalIDStr = 1;
  string realmStr = 2;
  repeated string allowedPaths = 3;
  map<string, ProcSecretProto> secrets = 4;
}

message ProcEnvProto {
  string pidStr = 1;
  string program = 2;
  string realmStr = 3;
  Tprincipal principal = 4;
  string procDir = 5;
  string parentDir = 6;
  map<string, TmountProto> etcdMounts = 7;
  string outerContainerIPStr = 8;
  string innerContainerIPStr = 9;
  string kernelID = 10;
  string buildTag = 11;
  string net = 12;
  string perf = 13;
  string debug = 14;
  string uprocdPIDStr = 15;
  bool privileged = 16;
  bool overlays = 17;
  int64 netFail = 18;
  int64 crash = 19;
  int64 partition = 20;
  int32 howInt = 21;
  google.protobuf.Timestamp spawnTimePB = 22;
  string strace = 23;
  TmountProto scheddMountProto = 24;
  TmountProto namedMountProto = 25;
  bool useSigmaclntd = 26;
  bool useNetProxy = 27;
  Ttoken parentToken = 28;
  ProcClaimsProto claims = 29;
  repeated string sigmaPath = 30;
}

message ProcProto {
  ProcEnvProto procEnvProto = 1;
  repeated string args = 6;
  map<string, string> env = 7;
  uint32 typeInt = 8;
  uint32 mcpuInt = 9;
  uint32 memInt = 10;
  string sharedTarget = 13;
}
